--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A to do app project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "supervisor server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/sunsesvasko/To-Do-App/issues"
   },
-  "homepage": "https://github.com/sunsesvasko/To-Do-App#readme"
+  "homepage": "https://github.com/sunsesvasko/To-Do-App#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "path": "^0.12.7",
+    "pug": "^3.0.2"
+  }
 }
