--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/sunsesvasko/To-Do-App#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "path": "^0.12.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "validator": "^13.11.0"
   }
 }
