--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
+    "util": "^0.12.5",
     "validator": "^13.11.0"
   }
 }
