--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A to do app project",
   "main": "server.js",
   "scripts": {
-    "start": "supervisor server.js"
+    "start": "supervisor server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/sunsesvasko/To-Do-App#readme",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -27,5 +30,8 @@
     "pug": "^3.0.2",
     "util": "^0.12.5",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5"
   }
 }
